Chapter 9 — Listing 9.6: TimeZoneModelling.java Demonstrates: ZoneId, ZonedDateTime, and withZoneSameInstant for